# Aegisub

./: .gitignore  .gitmodules  compile.sh  meson.build  meson_options.txt  org.aegisub.Aegisub.yml  tlconfig.lua
.github/workflows/: ci.yml  flatpak-build.yml
automation/include/: ffi.d.tl  lfs.tl  tlconfig.lua
automation/include/aegisub/: __global__.d.tl  __lfs_impl.d.tl  argcheck.tl  argcheck_copy.d.tl  clipboard.tl  ffi.tl  lfs.d.tl
libaegisub/lua/: utils.cpp
src/: ass_file.cpp  dialog_properties.cpp  dialog_version_check.cpp  dialog_video_properties.cpp  main.cpp  meson.build  resolution_resampler.cpp  subs_preview.cpp  subtitle_format_ass.cpp  wakatime.cpp  wakatime.h
src/automation/: auto4_base.cpp  auto4_base.h  meson.build
src/automation/Factories/: auto4_factories.cpp  auto4_factories.hpp  meson.build
src/automation/Factories/js/: auto4_js.cpp  auto4_js.h  auto4_js_assfile.cpp  auto4_js_dialog.cpp  auto4_js_factory.h  auto4_js_progresssink.cpp  meson.build
src/automation/factories/: auto4_factories.cpp  auto4_factories.hpp  meson.build
src/automation/factories/js/: auto4_js.cpp  auto4_js.h  auto4_js_assfile.cpp  auto4_js_dialog.cpp  auto4_js_factory.h  auto4_js_progresssink.cpp  idl_headers.h  meson.build  test.cpp  test.hpp  v8_helper.cpp  v8_helper.h
src/automation/factories/js/idl/: aegisub.idl
src/automation/factories/lua/: auto4_lua.h  auto4_lua_assfile.cpp  meson.build
src/command/: automation.cpp  edit.cpp
src/libresrc/: default_config.json
subprojects/: ffms2.wrap  flatpak.wrap  fuse.wrap  icu.wrap  libass.wrap
subprojects/packagefiles/icu/: meson.build
subprojects/packagefiles/icu/source/i18n/: meson.build
subprojects/packagefiles/libass/: meson.build
subprojects/packagefiles/luajit/src/host/: meson.build
tests/: meson.build
tests/js/: compiles.cpp
tests/tests/: fs.cpp
tools/: ubuntu-build-assdraw.sh  ubuntu-build-deb.sh
