i18n_sources = files(
'formattedval_iterimpl.cpp',
'csrsbcs.h',
'sharedpluralrules.h',
'uspoof_conf.h',
'fmtable_cnv.cpp',
'formatted_string_builder.cpp',
'pluralranges.cpp',
'number_skeletons.cpp',
'dtitvinf.cpp',
'number_utypes.h',
'choicfmt.cpp',
'cecal.cpp',
'numrange_impl.h',
'collationiterator.cpp',
'zonemeta.cpp',
'decNumber.h',
'tridpars.cpp',
'toupptrn.h',
'quant.h',
'collationroot.cpp',
'numparse_scientific.h',
'formatted_string_builder.h',
'collationrootelements.h',
'utf16collationiterator.cpp',
'uspoof_build.cpp',
'udateintervalformat.cpp',
'number_multiplier.cpp',
'calendar.cpp',
'shareddateformatsymbols.h',
'number_decimalquantity.cpp',
'units_router.cpp',
'dtitv_impl.h',
'stsearch.cpp',
'collationdatawriter.h',
'tznames_impl.h',
'formattedvalue.cpp',
'standardplural.h',
'transreg.h',
'smpdtfst.cpp',
'formattedval_impl.h',
'tznames.cpp',
'regexcst.txt',
'csdetect.h',
'number_rounding.cpp',
'basictz.cpp',
'double-conversion-string-to-double.cpp',
'number_decimfmtprops.h',
'numparse_compositions.h',
'rulebasedcollator.cpp',
'regexst.h',
'regexcst.pl',
'dtitvfmt.cpp',
'collationweights.cpp',
'udat.cpp',
'collationsettings.h',
'strrepl.h',
'strrepl.cpp',
'number_patternmodifier.h',
'dtrule.cpp',
'tmunit.cpp',
'dangical.h',
'number_scientific.h',
'collationcompare.cpp',
'plurrule.cpp',
'i18n_uwp.vcxproj',
'number_modifiers.h',
'pluralranges.h',
'measunit_impl.h',
'plurfmt.cpp',
'nfrs.h',
'nfrule.h',
'Makefile.in',
'double-conversion-cached-powers.cpp',
'search.cpp',
'collationtailoring.cpp',
'scientificnumberformatter.cpp',
'cpdtrans.h',
'nultrans.h',
'brktrans.cpp',
'collationsets.h',
'double-conversion-utils.h',
'decNumber.cpp',
'rbt_pars.cpp',
'listformatter.cpp',
'winnmfmt.h',
'reldtfmt.cpp',
'astro.h',
'dtptngen.cpp',
'tzfmt.cpp',
'usearch.cpp',
'collationfastlatinbuilder.h',
'numrange_capi.cpp',
'hebrwcal.h',
'nfsubs.cpp',
'regeximp.cpp',
'measfmt.cpp',
'vtzone.cpp',
'taiwncal.cpp',
'ulocdata.cpp',
'alphaindex.cpp',
'quant.cpp',
'erarules.cpp',
'tztrans.cpp',
'unesctrn.cpp',
'fphdlimp.h',
'double-conversion-strtod.h',
'nfrlist.h',
'zrule.h',
'collationdatareader.cpp',
'number_usageprefs.h',
'msgfmt.cpp',
'number_roundingutils.h',
'numparse_validators.h',
'cpdtrans.cpp',
'number_scientific.cpp',
'ztrans.h',
'number_formatimpl.cpp',
'numparse_compositions.cpp',
'collation.cpp',
'wintzimpl.cpp',
'uregexc.cpp',
'meson.build',
'number_capi.cpp',
'quantityformatter.h',
'numsys_impl.h',
'coptccal.cpp',
'sharednumberformat.h',
'double-conversion-bignum-dtoa.cpp',
'numparse_decimal.cpp',
'measunit_extra.cpp',
'zrule.cpp',
'uitercollationiterator.h',
'units_router.h',
'persncal.h',
'nfrs.cpp',
'numparse_types.h',
'ucol_imp.h',
'collationfastlatin.h',
'collationiterator.h',
'ethpccal.h',
'csrecog.h',
'currunit.cpp',
'regextxt.cpp',
'csrutf8.cpp',
'rbt.h',
'gregoimp.h',
'inputext.h',
'decNumberLocal.h',
'plurrule_impl.h',
'number_symbolswrapper.cpp',
'indiancal.h',
'units_converter.cpp',
'reldatefmt.cpp',
'ucoleitr.cpp',
'number_compact.h',
'numparse_impl.h',
'numparse_validators.cpp',
'collationsets.cpp',
'windtfmt.h',
'collation.h',
'datefmt.cpp',
'csrutf8.h',
'double-conversion-fast-dtoa.h',
'units_data.cpp',
'numrange_impl.cpp',
'cecal.h',
'ucal.cpp',
'dayperiodrules.cpp',
'unum.cpp',
'dcfmtsym.cpp',
'format.cpp',
'erarules.h',
'taiwncal.h',
'number_decimalquantity.h',
'wintzimpl.h',
'rbnf.cpp',
'region_impl.h',
'i18n.rc',
'numparse_scientific.cpp',
'remtrans.cpp',
'number_mapper.h',
'transreg.cpp',
'toupptrn.cpp',
'csdetect.cpp',
'double-conversion-double-to-string.cpp',
'quantityformatter.cpp',
'collationdatabuilder.h',
'double-conversion-bignum.cpp',
'string_segment.h',
'currfmt.h',
'number_modifiers.cpp',
'number_utils.cpp',
'numparse_decimal.h',
'utf16collationiterator.h',
'decimfmt.cpp',
'number_multiplier.h',
'number_patternstring.cpp',
'number_currencysymbols.h',
'udatpg.cpp',
'double-conversion-cached-powers.h',
'decContext.cpp',
'fmtableimp.h',
'csr2022.h',
'tmutamt.cpp',
'name2uni.cpp',
'double-conversion-strtod.cpp',
'vzone.h',
'bocsu.cpp',
'ztrans.cpp',
'titletrn.h',
'collationdatabuilder.cpp',
'casetrn.cpp',
'uspoof_conf.cpp',
'funcrepl.cpp',
'translit.cpp',
'ufieldpositer.cpp',
'utmscale.cpp',
'dangical.cpp',
'number_integerwidth.cpp',
'number_output.cpp',
'rbtz.cpp',
'tolowtrn.h',
'inputext.cpp',
'upluralrules.cpp',
'simpletz.cpp',
'double-conversion-diy-fp.h',
'regexcmp.cpp',
'csrmbcs.cpp',
'utf8collationiterator.cpp',
'currfmt.cpp',
'double-conversion-bignum-dtoa.h',
'numparse_impl.cpp',
'number_patternstring.h',
'collationweights.h',
'number_patternmodifier.cpp',
'double-conversion-string-to-double.h',
'olsontz.h',
'strmatch.cpp',
'zonemeta.h',
'numfmt.cpp',
'collationbuilder.h',
'numrange_fluent.cpp',
'csrmbcs.h',
'number_mapper.cpp',
'coleitr.cpp',
'ucln_in.cpp',
'csmatch.cpp',
'chnsecal.h',
'brktrans.h',
'collationbuilder.cpp',
'dayperiodrules.h',
'numparse_symbols.h',
'regextxt.h',
'scriptset.h',
'rbt_set.h',
'csmatch.h',
'sharedbreakiterator.cpp',
'numparse_affixes.h',
'windtfmt.cpp',
'number_grouping.cpp',
'number_currencysymbols.cpp',
'nortrans.cpp',
'reldtfmt.h',
'japancal.h',
'utrans.cpp',
'dtfmtsym.cpp',
'uni2name.cpp',
'gregoimp.cpp',
'numparse_utils.h',
'double-conversion.h',
'curramt.cpp',
'sharedcalendar.h',
'collationcompare.h',
'ulistformatter.cpp',
'smpdtfmt.cpp',
'indiancal.cpp',
'number_compact.cpp',
'fmtable.cpp',
'collationfastlatinbuilder.cpp',
'uni2name.h',
'number_longnames.h',
'buddhcal.cpp',
'collationdata.h',
'esctrn.h',
'collationfastlatin.cpp',
'rbt_pars.h',
'regexcmp.h',
'uspoof_impl.h',
'gregocal.cpp',
'number_skeletons.h',
'scriptset.cpp',
'coptccal.h',
'number_usageprefs.cpp',
'collationdatawriter.cpp',
'anytrans.h',
'unumsys.cpp',
'astro.cpp',
'ethpccal.cpp',
'number_longnames.cpp',
'double-conversion-ieee.h',
'tzgnames.cpp',
'number_microprops.h',
'numparse_parsednumber.cpp',
'rbt_data.cpp',
'selfmt.cpp',
'tridpars.h',
'rbt.cpp',
'bocsu.h',
'number_types.h',
'uregion.cpp',
'number_decimfmtprops.cpp',
'formattedval_sbimpl.cpp',
'units_converter.h',
'measunit.cpp',
'hebrwcal.cpp',
'double-conversion-bignum.h',
'regexst.cpp',
'double-conversion-fast-dtoa.cpp',
'units_complexconverter.cpp',
'repattrn.cpp',
'collationdatareader.h',
'collationroot.h',
'remtrans.h',
'tmutfmt.cpp',
'uregex.cpp',
'collationsettings.cpp',
'timezone.cpp',
'collationkeys.cpp',
'uspoof.cpp',
'utf8collationiterator.h',
'islamcal.h',
'regeximp.h',
'nultrans.cpp',
'collationrootelements.cpp',
'csrsbcs.cpp',
'regexcst.h',
'uspoof_impl.cpp',
'number_fluent.cpp',
'number_padding.cpp',
'number_affixutils.cpp',
'esctrn.cpp',
'buddhcal.h',
'units_data.h',
'unesctrn.h',
'tznames_impl.cpp',
'number_utils.h',
'strmatch.h',
'number_affixutils.h',
'numparse_affixes.cpp',
'rbt_rule.h',
'numparse_symbols.cpp',
'decContext.h',
'numberrangeformatter.h',
'ucal.h',
'uformattedvalue.h',
'tmutfmt.h',
'listformatter.h',
'udateintervalformat.h',
'fmtable.h',
'region.h',
'uformattable.h',
'ucol.h',
'tmutamt.h',
'tmunit.h',
'coleitr.h',
'gregocal.h',
'simpletz.h',
'rbtz.h',
'vtzone.h',
'msgfmt.h',
'unirepl.h',
'utmscale.h',
'unumberformatter.h',
'ucsdet.h',
'ulocdata.h',
'umsg.h',
'reldatefmt.h',
'dtptngen.h',
'uregion.h',
'fpositer.h',
'translit.h',
'regex.h',
'currpinf.h',
'usearch.h',
'ufieldpositer.h',
'uspoof.h',
'tblcoll.h',
'dtrule.h',
'stsearch.h',
'tznames.h',
'udatpg.h',
'unum.h',
'ucoleitr.h',
'dtfmtsym.h',
'choicfmt.h',
'upluralrules.h',
'tzfmt.h',
'timezone.h',
'currunit.h',
'tzrule.h',
'ugender.h',
'scientificnumberformatter.h',
'utrans.h',
'nounit.h',
'numfmt.h',
'unumberrangeformatter.h',
'ureldatefmt.h',
'udat.h',
'calendar.h',
'formattedvalue.h',
'numberformatter.h',
'dtitvinf.h',
'ulistformatter.h',
'compactdecimalformat.h',
'uregex.h',
'alphaindex.h',
'unumsys.h',
'datefmt.h',
'dtitvfmt.h',
'smpdtfmt.h',
'coll.h',
'gender.h',
'measfmt.h',
'fieldpos.h',
'numsys.h',
'tztrans.h',
'search.h',
'selfmt.h',
'basictz.h',
'decimfmt.h',
'format.h',
'curramt.h',
'plurfmt.h',
'dcfmtsym.h',
'rbnf.h',
'measunit.h',
'sortkey.h',
'plurrule.h',
'measure.h',
'numsys.cpp',
'coll.cpp',
'fphdlimp.cpp',
'i18n.vcxproj',
'tzrule.cpp',
'collationruleparser.cpp',
'ucol_sit.cpp',
'collationruleparser.h',
'usrchimp.h',
'persncal.cpp',
'ucln_in.h',
'collationtailoring.h',
'collationfcd.cpp',
'ucsdet.cpp',
'tolowtrn.cpp',
'nfrule.cpp',
'collationkeys.h',
'chnsecal.cpp',
'csrucode.cpp',
'rbt_rule.cpp',
'sharedbreakiterator.h',
'standardplural.cpp',
'casetrn.h',
'compactdecimalformat.cpp',
'selfmtimpl.h',
'nfsubs.h',
'rbt_set.cpp',
'vzone.cpp',
'units_complexconverter.h',
'tzgnames.h',
'funcrepl.h',
'rematch.cpp',
'collationdata.cpp',
'smpdtfst.h',
'double-conversion-double-to-string.h',
'number_asformat.h',
'dtptngen_impl.h',
'csr2022.cpp',
'nortrans.h',
'umsg.cpp',
'rbt_data.h',
'csrecog.cpp',
'gender.cpp',
'region.cpp',
'currpinf.cpp',
'anytrans.cpp',
'number_decnum.h',
'japancal.cpp',
'winnmfmt.cpp',
'numparse_currency.cpp',
'olsontz.cpp',
'ucol.cpp',
'titletrn.cpp',
'collunsafe.h',
'number_formatimpl.h',
'collationfcd.h',
'number_notation.cpp',
'numparse_currency.h',
'name2uni.h',
'fpositer.cpp',
'umsg_imp.h',
'string_segment.cpp',
'measure.cpp',
'msgfmt_impl.h',
'number_asformat.cpp',
'islamcal.cpp',
'uitercollationiterator.cpp',
'csrucode.h',
'dt_impl.h',
'ucol_res.cpp',
'sortkey.cpp',
)

i18n_args = '-DU_I18N_IMPLEMENTATION'
i18n_link = ['uc']
i18n_deps = []
